updated spec
